# IntentGuard

./: .gitignore  README.md  pyproject.toml
intentguard/: __init__.py
intentguard/agent/: api.py  server.py
intentguard/cli/: main.py
intentguard/interceptors/: cli.py
intentguard/reasoning/: context.py  engine.py  llm.py  ml.py  risk.py  rules.py
intentguard/reasoning/models/: cmd_classifier.pkl
intentguard/storage/: db.py
